@@ -1,4 +1,5 @@
 SVN
+- Fix bug 17198 - Unable to close non-result statements
 - Fix bug 17092 - SIGBUS when fetching data on 64-bit Solaris
 - IIapi_getDescriptor() should only be called for SELECT statements
 - Add ingres_fetch_assoc()
